# windows_coreaudio_wrapper

./: CMakeLists.txt  LICENSE  README.md
include/coreaudio/: com_context.h  coreaudio.h  device.h  device_collection.h  device_enumerator.h
include/coreaudio/device_interfaces/: device_interfaces.h  endpoint_volume.h
include/coreaudio/util/: h_optional.h  has_uuid.h  indexed_dynamic_iterator.h  interface_wrapper.h  smart_pointers.h  throw_com_error.h  utils.h
sample/: print_devices.cpp
